# replicate-idx

./: .coverage  pyproject.toml
data/: CRYPTO_2024_LONG.parquet  INDEX_2010_SP500.parquet  INDEX_2010_X.parquet  SP500_r_2010_2015.parquet
replicate/data/: align.py  analysis.py  loading.py  paths.py
replicate/evaluation/: metrics.py  visualizer.py
replicate/notebooks/: crypto_data_demo.ipynb  demo.ipynb  sp500_data_demo.ipynb
replicate/optimizers/: kkt.py  mm.py  objectives.py  updates.py
replicate/tests/: __init__.py  test_kkt.py  test_objectives.py  test_updates.py
