[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "replicate-idx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ipykernel>=6.29.5",
    "parquet>=1.3.1",
    "polars>=1.8.2",
    "numpy>=1.24.0"
]

[tool.setuptools]
packages = ["replicate"]
package-dir = {replicate = "replicate"}

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]

[tool.pytest.ini_options]
addopts = "-v --cov=replicate --cov-report=term-missing"
testpaths = ["replicate/tests"]
python_files = ["test_*.py"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
